# netxms

./: configure.ac
include/: nms_cscp.h
src/agent/subagents/: Makefile.am
src/agent/subagents/ssh/: handlers.cpp  key_list.cpp  session.cpp  sp.cpp  ssh_subagent.h
src/agent/subagents/wineventgen/: Makefile.am  wineventgen.cpp
src/client/java/netxms-client/src/main/java/org/netxms/client/: NXCSession.java
src/client/java/netxms-client/src/main/java/org/netxms/client/constants/: RCC.java
src/client/java/netxms-client/src/main/java/org/netxms/client/datacollection/: BulkUpdateElement.java  DataCollectionConfiguration.java
src/java-common/netxms-base/src/main/java/org/netxms/base/: NXCPCodes.java
src/java/netxms-eclipse/DataCollection/src/org/netxms/ui/eclipse/datacollection/dialogs/: BulkUpdateDialog.java
src/java/netxms-eclipse/DataCollection/src/org/netxms/ui/eclipse/datacollection/dialogs/helpers/: BulkUpdateLabelProvider.java  BulkValueEditSupport.java
src/java/netxms-eclipse/DataCollection/src/org/netxms/ui/eclipse/datacollection/views/: DataCollectionEditor.java
src/java/netxms-eclipse/LogViewer/src/org/netxms/ui/eclipse/logviewer/dialogs/: WindowsEventLogRecordDetailsDialog.java
src/java/netxms-eclipse/NetworkMaps/src/org/netxms/ui/eclipse/networkmaps/views/helpers/: ObjectFigure.java  ObjectTooltip.java
src/java/netxms-eclipse/NetworkMaps/src/org/netxms/ui/eclipse/networkmaps/widgets/: NetworkMapWidget.java
src/java/netxms-eclipse/ObjectManager/src/org/netxms/ui/eclipse/objectmanager/propertypages/: SSH.java
src/java/netxms-eclipse/ServerConfig/src/org/netxms/ui/eclipse/serverconfig/dialogs/: CerateKeyNameDialog.java  EditSshKeysDialog.java
src/java/netxms-eclipse/ServerConfig/src/org/netxms/ui/eclipse/serverconfig/views/: PersistentStorageView.java  SshKeyConfigurator.java
src/java/netxms-eclipse/UserManager/src/org/netxms/ui/eclipse/usermanager/propertypages/: SystemRights.java
src/libnetxms/: nxcp.cpp
src/server/core/: session.cpp  sshkeys.cpp
src/server/drivers/: Makefile.am
src/server/libnxsrv/: main.cpp
